terraform/subnets.tf
# Cria 1 subnet privada por zona de disponibilidade,
# usa count para percorrer a lista de AZs/CIDRs.
resource "aws_subnet" "private" {
  count = length(var.availability_zones)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  # Subnet privada: não atribui IP público automaticamente
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.project_name}-private-subnet-${count.index + 1}-${var.availability_zones[count.index]}"
  }

  depends_on = [ aws_vpc.main ]
}

resource "aws_subnet" "public" {
  count = length(var.availability_zones)
  vpc_id = aws_vpc.main.id
  cidr_block = var.public_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-public-subnet-${count.index + 1}"
  }

  depends_on = [ aws_vpc.main ]
}
